--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -351,7 +351,7 @@ h3 {
 }
 .hero {
 	position: relative;
-	margin: 0 -2rem 2rem;
+	margin: 0 calc(50% - 50vw) 2rem;
 	overflow: hidden;
 	min-height: 250px;
 	display: flex;
